Make merge multiple layers work consistently with weird nodes

If the node is not composed with NORMAL composite mode or
has inherit alpha enabled we should update the stack after
the node is removed.

BUG:399146